# feast

sdk/python/: pyproject.toml
sdk/python/feast/: entity.py  feature_store.py  feature_view.py  on_demand_feature_view.py  online_response.py  python_types.py  registry.py  repo_operations.py  type_map.py
sdk/python/feast/infra/: key_encoding_utils.py  passthrough_provider.py  provider.py
sdk/python/feast/infra/offline_stores/: file_source.py
sdk/python/feast/infra/online_stores/: dynamodb.py  sqlite.py
sdk/python/tests/benchmarks/: test_benchmark_universal_online_retrieval.py
sdk/python/tests/data/: data_creator.py
sdk/python/tests/integration/feature_repos/universal/: feature_views.py
sdk/python/tests/integration/registration/: test_universal_types.py
